--- a/index.html
+++ b/index.html
@@ -11,22 +11,22 @@
         <img src="assets/tech_it_easy.png" alt="Tech it Easy logo" />
     </header>
     <section>
-        opdracht 1b
+        opdracht 1b<br />
         <label for="televisions">televisions: </label>
         <label id="televisions"></label>
     </section>
     <section>
-        opdracht 3a
+        opdracht 3a<br />
         <label for="max-profit">Maximum possible profit: </label>
         <label id="max-profit"></label>
     </section>
     <section>
-        opdracht 3b
+        opdracht 3b<br />
         <label for="current-profit">profit so far: </label>
         <label id="current-profit"></label>
     </section>
     <section>
-        opdracht 4
+        opdracht 4<br />
         two tv names:
         <ul id="two-tvs">
         </ul>
@@ -36,7 +36,7 @@
         <ul id="tv-information-format">
         </ul>
     <section id="info-all-tvs">
-        opdracht 5e
+        opdracht 5e<br />
         <label for="info-all-tvs">all items info: </label>
     </section>
 </div>
